Fixed title size on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -123,3 +123,11 @@ footer {
   color: #777;
   border-top: 1px solid #eaeaea;
 }
+
+@media only screen and (max-width: 600px) {
+  
+  .bottomPage {
+    font-color: red;
+  }
+  
+}
